# sound

./: CMakeLists.txt  bottombar.cpp  bottombar.h  leftpanel.cpp  leftpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  middlepanel.cpp  middlepanel.h  odczyt.cpp  odczyt.h  playlist.cpp  playlist.h  playlistmanager.cpp  playlistmanager.h  rightpanel.cpp  rightpanel.h  servermanager.cpp  servermanager.h  zapis.cpp  zapis.h
